--- a/.github/workflows/secret-scan.yml
+++ b/.github/workflows/secret-scan.yml
@@ -1,28 +1,45 @@
-name: Secret Scan
-
+name: Security Scan - Git Secrets
+ 
+ 
 on:
   push:
+    branches: [ main, master ]
   pull_request:
-
+    branches: [ main, master ]
+ 
+ 
 jobs:
-  git-secrets-scan:
+  scan:
+    name: Scan for hardcoded secrets
+   
     runs-on: ubuntu-latest
+ 
+   
     steps:
-      - name: Checkout
+     
+      - name: Checkout Code
         uses: actions/checkout@v4
-
+        with:
+         
+          fetch-depth: 0
+ 
+     
       - name: Install git-secrets
         run: |
-          sudo apt-get update
-          sudo apt-get install -y git make
           git clone https://github.com/awslabs/git-secrets.git
-          cd git-secrets && sudo make install
-
-      - name: Configure patterns
+          cd git-secrets
+          sudo make install
+          cd ..
+          rm -rf git-secrets
+ 
+     
+      - name: Scan Repository
         run: |
+          # Set up git-secrets for the repository
+          git secrets --install
+          # Add the default rules for AWS keys and other common patterns
           git secrets --register-aws
-          git secrets --add 'password\s*='
-          git secrets --add 'api[_-]?key\s*:'
-
-      - name: Scan repository
-        run: git secrets --scan -r .
+          # Scan all files. If a secret is found, this command will fail,
+          # which causes the entire workflow to fail.
+          echo "Scanning for secrets..."
+          git secrets --scan --recursive .
